@@ -1,6 +1,8 @@
 === 1.0.0 / 2014-01-15
 
 * Rename platform to ruby_platform
+* Rename environment to env
 * Add ruby_revision and ruby_copyright
+* Add verbose and debug
 * Moved from zucker 13.1 gem into its own gem
 
